--- a/trunk/tasma/network-manager/po/de.po
+++ b/trunk/tasma/network-manager/po/de.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-23 20:04+0200\n"
+"POT-Creation-Date: 2007-02-27 14:25+0200\n"
 "PO-Revision-Date: 2007-02-08 16:03+0100\n"
 "Last-Translator: Mustafa Muhammed Ölcerman <oelcerman@fussballkreis.org>\n"
 "Language-Team:  <pardus-translation-de@liste.pardus.org.tr>\n"
@@ -21,15 +21,15 @@ msgstr ""
 msgid "Name:"
 msgstr "Name:"
 
-#: browser.py:56 connection.py:76
+#: browser.py:56 connection.py:191
 msgid "Authentication"
 msgstr "Authentifikation"
 
-#: browser.py:59 connection.py:214
+#: browser.py:59 connection.py:282
 msgid "Address:"
 msgstr "Adresse:"
 
-#: browser.py:62 connection.py:251
+#: browser.py:62 connection.py:319
 msgid "Automatic"
 msgstr "Automatisch"
 
@@ -76,83 +76,111 @@ msgstr "Name Service Einstellungen"
 msgid "Network Connections Help"
 msgstr "Netzwerkverbindungen Hilfe"
 
-#: connection.py:34
-msgid "Connection name:"
-msgstr "Name der Verbindung:"
+#: nameconf.py:35
+msgid "Computer"
+msgstr "Computer"
 
-#: connection.py:41
-msgid "Connection"
-msgstr "Verbindung"
+#: nameconf.py:41
+msgid "Host name:"
+msgstr "Hostname:"
 
-#: connection.py:47
-msgid "Device:"
-msgstr "Gerät:"
-
-#: connection.py:52
-msgid "Select"
-msgstr "Auswählen"
-
-#: connection.py:66
-msgid "Scan"
-msgstr "Scannen"
-
-#: connection.py:82
-msgid "Mode:"
-msgstr "Art:"
-
-#: connection.py:90
-msgid "No authentication"
-msgstr "Keine Authentifikation"
-
-#: connection.py:108 connection.py:119
-msgid "Password:"
-msgstr "Passwort:"
-
-#: connection.py:116
-msgid "User name:"
-msgstr "Benutzername:"
-
-#: connection.py:146
-msgid "Scan results:"
-msgstr "Suchergebnisse:"
-
-#: connection.py:154
-msgid "Scan again"
-msgstr "Erneut suchen"
-
-#: connection.py:156
-msgid "Use"
-msgstr "Verwenden"
-
-#: connection.py:195
-msgid "Network settings"
-msgstr "Netzwerkeinstellungen"
-
-#: connection.py:205
-msgid "Automatic query (DHCP)"
-msgstr "Automatisch beziehen (DHCP)"
-
-#: connection.py:210
-msgid "Manual"
-msgstr "Manuell"
-
-#: connection.py:221 connection.py:238 connection.py:253
-msgid "Custom"
-msgstr "Individual"
-
-#: connection.py:226
-msgid "Net mask:"
-msgstr "Netzmaske:"
-
-#: connection.py:233
-msgid "Gateway:"
-msgstr "Gateway:"
-
-#: connection.py:242 nameconf.py:45
+#: nameconf.py:45 connection.py:310
 msgid "Name servers"
 msgstr "Name-Server"
 
-#: connection.py:444
+#: nameconf.py:56
+msgid "Up"
+msgstr "Hoch"
+
+#: nameconf.py:59
+msgid "Down"
+msgstr "Runter"
+
+#: nameconf.py:134
+msgid "Add Name Server"
+msgstr "Name-Server hinzufügen"
+
+#: nameconf.py:135
+msgid "Name server:"
+msgstr "Name-Server:"
+
+#: connection.py:43
+msgid "<hidden>"
+msgstr ""
+
+#: connection.py:76
+msgid "Scan results:"
+msgstr "Suchergebnisse:"
+
+#: connection.py:91
+msgid "Scan again"
+msgstr "Erneut suchen"
+
+#: connection.py:93
+msgid "Use"
+msgstr "Verwenden"
+
+#: connection.py:148
+msgid "Connection name:"
+msgstr "Name der Verbindung:"
+
+#: connection.py:155
+msgid "Connection"
+msgstr "Verbindung"
+
+#: connection.py:161
+msgid "Device:"
+msgstr "Gerät:"
+
+#: connection.py:166
+msgid "Select"
+msgstr "Auswählen"
+
+#: connection.py:180
+msgid "Scan"
+msgstr "Scannen"
+
+#: connection.py:197
+msgid "Mode:"
+msgstr "Art:"
+
+#: connection.py:205
+msgid "No authentication"
+msgstr "Keine Authentifikation"
+
+#: connection.py:223 connection.py:234
+msgid "Password:"
+msgstr "Passwort:"
+
+#: connection.py:231
+msgid "User name:"
+msgstr "Benutzername:"
+
+#: connection.py:263
+msgid "Network settings"
+msgstr "Netzwerkeinstellungen"
+
+#: connection.py:273
+msgid "Automatic query (DHCP)"
+msgstr "Automatisch beziehen (DHCP)"
+
+#: connection.py:278
+msgid "Manual"
+msgstr "Manuell"
+
+#: connection.py:289 connection.py:306 connection.py:321
+msgid "Custom"
+msgstr "Individual"
+
+#: connection.py:294
+msgid "Net mask:"
+msgstr "Netzmaske:"
+
+#: connection.py:301
+msgid "Gateway:"
+msgstr "Gateway:"
+
+#: connection.py:512
 msgid "Configure network connection"
 msgstr "Netzwerkverbindungen konfigurieren"
 
@@ -187,30 +215,6 @@ msgstr ""
 msgid "new connection"
 msgstr "Neue Verbindung"
 
-#: nameconf.py:35
-msgid "Computer"
-msgstr "Computer"
-
-#: nameconf.py:41
-msgid "Host name:"
-msgstr "Hostname:"
-
-#: nameconf.py:56
-msgid "Up"
-msgstr "Hoch"
-
-#: nameconf.py:59
-msgid "Down"
-msgstr "Runter"
-
-#: nameconf.py:134
-msgid "Add Name Server"
-msgstr "Name-Server hinzufügen"
-
-#: nameconf.py:135
-msgid "Name server:"
-msgstr "Name-Server:"
-
 #: newconn.py:26
 msgid "Create a new connection"
 msgstr "Eine neue Verindung erstellen"
@@ -219,21 +223,22 @@ msgstr "Eine neue Verindung erstellen"
 msgid "Select device:"
 msgstr "Gerät auswählen:"
 
-#: newconn.py:57
+#: newconn.py:58
 msgid "Create"
 msgstr "Erstellen"
 
-#: newconn.py:103
+#: newconn.py:112
 msgid "No suitable device found"
 msgstr "Kein geeignetes Gerät gefunden"
 
-#: newconn.py:109
+#: newconn.py:118
 msgid "Install network packages!"
 msgstr "Netzwerk-Pakete installieren!"
 
-#: newconn.py:110
+#: newconn.py:119
 msgid "No package with COMAR network scripts are installed yet."
-msgstr "Es ist noch kein Paket installiert um das Netzwerk über COMAR zu bilden."
+msgstr ""
+"Es ist noch kein Paket installiert um das Netzwerk über COMAR zu bilden."
 
 #: network-applet.py:293
 msgid "Firewall..."
@@ -253,9 +258,9 @@ msgstr "Einzelnes Icon"
 
 #: network-applet.py:341
 msgid "Should network-applet start automatically when you login?"
-msgstr "Soll der Netzwerk Applet automatisch bei der Anmeldung gestartet werden?"
+msgstr ""
+"Soll der Netzwerk Applet automatisch bei der Anmeldung gestartet werden?"
 
 #: network-applet.py:491
 msgid "Network Applet"
 msgstr "Netzwerk Applet"
-
