--- a/trunk/tasma/network-manager/po/nl.po
+++ b/trunk/tasma/network-manager/po/nl.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-23 20:04+0200\n"
+"POT-Creation-Date: 2007-02-27 14:25+0200\n"
 "PO-Revision-Date: 2007-02-18 03:05+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
@@ -23,15 +23,15 @@ msgstr ""
 msgid "Name:"
 msgstr "Naam:"
 
-#: browser.py:56 connection.py:76
+#: browser.py:56 connection.py:191
 msgid "Authentication"
 msgstr "Identificatie"
 
-#: browser.py:59 connection.py:214
+#: browser.py:59 connection.py:282
 msgid "Address:"
 msgstr "Adres:"
 
-#: browser.py:62 connection.py:251
+#: browser.py:62 connection.py:319
 msgid "Automatic"
 msgstr "Automatisch"
 
@@ -83,85 +83,115 @@ msgstr "Naam dienst instellingen"
 msgid "Network Connections Help"
 msgstr "Netwerkverbindingen hulp"
 
-#: connection.py:34
-msgid "Connection name:"
-msgstr "Naam verbinding:"
+#: nameconf.py:35
+msgid "Computer"
+msgstr "Computer"
 
-#: connection.py:41
-msgid "Connection"
-msgstr "Verbinding"
-
-#: connection.py:47
-msgid "Device:"
-msgstr "Apparaat:"
-
-#: connection.py:52
-msgid "Select"
-msgstr "Kies"
-
-#: connection.py:66
-msgid "Scan"
-msgstr "Scan"
-
-#: connection.py:82
-msgid "Mode:"
-msgstr "Modus:"
-
-#: connection.py:90
-msgid "No authentication"
-msgstr "Geen toegang"
-
-#: connection.py:108 connection.py:119
-msgid "Password:"
-msgstr "Wachtwoord:"
-
-#: connection.py:116
-msgid "User name:"
-msgstr "Gebruikersnaam:"
-
-#: connection.py:146
-msgid "Scan results:"
-msgstr "Scan resultaat:"
-
-#: connection.py:154
-msgid "Scan again"
-msgstr "Scan opnieuw"
-
-#: connection.py:156
-msgid "Use"
-msgstr "Gebruik"
-
-#: connection.py:195
-msgid "Network settings"
-msgstr "Netwerkinstellingen"
-
-#: connection.py:205
-msgid "Automatic query (DHCP)"
-msgstr "Automatische aanvraag (DHCP)"
-
-#: connection.py:210
-msgid "Manual"
-msgstr "Handmatig"
-
-#: connection.py:221 connection.py:238 connection.py:253
-msgid "Custom"
-msgstr "Eigen"
-
-#: connection.py:226
-msgid "Net mask:"
-msgstr "Netmask:"
-
-#: connection.py:233
-msgid "Gateway:"
-msgstr "Gateway:"
+#: nameconf.py:41
+msgid "Host name:"
+msgstr "Hostnaam:"
 
 # naamservers
-#: connection.py:242 nameconf.py:45
+#: nameconf.py:45 connection.py:310
 msgid "Name servers"
 msgstr "Naamservers"
 
+#: nameconf.py:56
+msgid "Up"
+msgstr "Omhoog"
+
+#: nameconf.py:59
+msgid "Down"
+msgstr "Omlaag"
+
+# infinitief vertalen:
+# Naamserver toevoegen
+#: nameconf.py:134
+msgid "Add Name Server"
+msgstr "Voeg naamserver toe"
+
+#: nameconf.py:135
+msgid "Name server:"
+msgstr "Naamserver:"
+
+#: connection.py:43
+msgid "<hidden>"
+msgstr ""
+
+#: connection.py:76
+msgid "Scan results:"
+msgstr "Scan resultaat:"
+
+#: connection.py:91
+msgid "Scan again"
+msgstr "Scan opnieuw"
+
+#: connection.py:93
+msgid "Use"
+msgstr "Gebruik"
+
+#: connection.py:148
+msgid "Connection name:"
+msgstr "Naam verbinding:"
+
+#: connection.py:155
+msgid "Connection"
+msgstr "Verbinding"
+
+#: connection.py:161
+msgid "Device:"
+msgstr "Apparaat:"
+
+#: connection.py:166
+msgid "Select"
+msgstr "Kies"
+
+#: connection.py:180
+msgid "Scan"
+msgstr "Scan"
+
+#: connection.py:197
+msgid "Mode:"
+msgstr "Modus:"
+
+#: connection.py:205
+msgid "No authentication"
+msgstr "Geen toegang"
+
+#: connection.py:223 connection.py:234
+msgid "Password:"
+msgstr "Wachtwoord:"
+
+#: connection.py:231
+msgid "User name:"
+msgstr "Gebruikersnaam:"
+
+#: connection.py:263
+msgid "Network settings"
+msgstr "Netwerkinstellingen"
+
+#: connection.py:273
+msgid "Automatic query (DHCP)"
+msgstr "Automatische aanvraag (DHCP)"
+
+#: connection.py:278
+msgid "Manual"
+msgstr "Handmatig"
+
+#: connection.py:289 connection.py:306 connection.py:321
+msgid "Custom"
+msgstr "Eigen"
+
+#: connection.py:294
+msgid "Net mask:"
+msgstr "Netmask:"
+
+#: connection.py:301
+msgid "Gateway:"
+msgstr "Gateway:"
+
 # infinitief vertalen: netwerkverbinding configureren
-#: connection.py:444
+#: connection.py:512
 msgid "Configure network connection"
 msgstr "Configureer netwerkverbinding"
 
@@ -195,32 +225,6 @@ msgstr ""
 msgid "new connection"
 msgstr "nieuwe verbinding"
 
-#: nameconf.py:35
-msgid "Computer"
-msgstr "Computer"
-
-#: nameconf.py:41
-msgid "Host name:"
-msgstr "Hostnaam:"
-
-#: nameconf.py:56
-msgid "Up"
-msgstr "Omhoog"
-
-#: nameconf.py:59
-msgid "Down"
-msgstr "Omlaag"
-
-# infinitief vertalen:
-# Naamserver toevoegen
-#: nameconf.py:134
-msgid "Add Name Server"
-msgstr "Voeg naamserver toe"
-
-#: nameconf.py:135
-msgid "Name server:"
-msgstr "Naamserver:"
-
 #: newconn.py:26
 msgid "Create a new connection"
 msgstr "Nieuwe verbinding maken"
@@ -229,21 +233,21 @@ msgstr "Nieuwe verbinding maken"
 msgid "Select device:"
 msgstr "Kies apparaat:"
 
-#: newconn.py:57
+#: newconn.py:58
 msgid "Create"
 msgstr "Maak"
 
-#: newconn.py:103
+#: newconn.py:112
 msgid "No suitable device found"
 msgstr "Geen geschikt apparaat gevonden"
 
-#: newconn.py:109
+#: newconn.py:118
 msgid "Install network packages!"
 msgstr "Installeer netwerkpakketten!"
 
 # koppelteken vergeten:
 # Comar-netwerkscripts
-#: newconn.py:110
+#: newconn.py:119
 msgid "No package with COMAR network scripts are installed yet."
 msgstr "Er is nog geen pakket met COMAR netwerkscripts geïnstalleerd."
 
@@ -270,4 +274,3 @@ msgstr "Dient de netwerk-applet automatisch te starten als u inlogt?"
 #: network-applet.py:491
 msgid "Network Applet"
 msgstr "Netwerk-applet"
-
