--- a/trunk/tasma/network-manager/po/pt_BR.po
+++ b/trunk/tasma/network-manager/po/pt_BR.po
@@ -7,10 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-11-07 21:36+0200\n"
+"POT-Creation-Date: 2007-02-27 14:25+0200\n"
 "PO-Revision-Date: 2007-02-19 22:24-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazilian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
+"Language-Team: Brazilian Portuguese <http://liste.uludag.org.tr/mailman/"
+"listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,15 +21,15 @@ msgstr ""
 msgid "Name:"
 msgstr "Nome:"
 
-#: browser.py:56 connection.py:76
+#: browser.py:56 connection.py:191
 msgid "Authentication"
 msgstr "Autenticação"
 
-#: browser.py:59 connection.py:214
+#: browser.py:59 connection.py:282
 msgid "Address:"
 msgstr "Endereço:"
 
-#: browser.py:62 connection.py:251
+#: browser.py:62 connection.py:319
 msgid "Automatic"
 msgstr "Automático"
 
@@ -74,83 +75,111 @@ msgstr "Preferências do Serviço de Nomes"
 msgid "Network Connections Help"
 msgstr "Ajuda de Conexões de Rede"
 
-#: connection.py:34
-msgid "Connection name:"
-msgstr "Nome da conexão:"
+#: nameconf.py:35
+msgid "Computer"
+msgstr "Computador"
 
-#: connection.py:41
-msgid "Connection"
-msgstr "Conexão"
+#: nameconf.py:41
+msgid "Host name:"
+msgstr "Nome do host:"
 
-#: connection.py:47
-msgid "Device:"
-msgstr "Dispositivo:"
-
-#: connection.py:52
-msgid "Select"
-msgstr "Selecionar"
-
-#: connection.py:66
-msgid "Scan"
-msgstr "Examinar"
-
-#: connection.py:82
-msgid "Mode:"
-msgstr "Modo:"
-
-#: connection.py:90
-msgid "No authentication"
-msgstr "Sem autenticação"
-
-#: connection.py:108 connection.py:119
-msgid "Password:"
-msgstr "Senha:"
-
-#: connection.py:116
-msgid "User name:"
-msgstr "Nome do usuário:"
-
-#: connection.py:146
-msgid "Scan results:"
-msgstr "Resultado da examinação:"
-
-#: connection.py:154
-msgid "Scan again"
-msgstr "Examinar de novo"
-
-#: connection.py:156
-msgid "Use"
-msgstr "Usar"
-
-#: connection.py:195
-msgid "Network settings"
-msgstr "Preferências de rede"
-
-#: connection.py:205
-msgid "Automatic query (DHCP)"
-msgstr "Consulta automática (DHCP)"
-
-#: connection.py:210
-msgid "Manual"
-msgstr "Manual"
-
-#: connection.py:221 connection.py:238 connection.py:253
-msgid "Custom"
-msgstr "Personalizado"
-
-#: connection.py:226
-msgid "Net mask:"
-msgstr "Máscara de rede:"
-
-#: connection.py:233
-msgid "Gateway:"
-msgstr "Gateway:"
-
-#: connection.py:242 nameconf.py:45
+#: nameconf.py:45 connection.py:310
 msgid "Name servers"
 msgstr "Servidores de nome"
 
-#: connection.py:444
+#: nameconf.py:56
+msgid "Up"
+msgstr "Acima"
+
+#: nameconf.py:59
+msgid "Down"
+msgstr "Abaixo"
+
+#: nameconf.py:134
+msgid "Add Name Server"
+msgstr "Adicionar um Servidor de Nomes"
+
+#: nameconf.py:135
+msgid "Name server:"
+msgstr "Servidor de nomes:"
+
+#: connection.py:43
+msgid "<hidden>"
+msgstr ""
+
+#: connection.py:76
+msgid "Scan results:"
+msgstr "Resultado da examinação:"
+
+#: connection.py:91
+msgid "Scan again"
+msgstr "Examinar de novo"
+
+#: connection.py:93
+msgid "Use"
+msgstr "Usar"
+
+#: connection.py:148
+msgid "Connection name:"
+msgstr "Nome da conexão:"
+
+#: connection.py:155
+msgid "Connection"
+msgstr "Conexão"
+
+#: connection.py:161
+msgid "Device:"
+msgstr "Dispositivo:"
+
+#: connection.py:166
+msgid "Select"
+msgstr "Selecionar"
+
+#: connection.py:180
+msgid "Scan"
+msgstr "Examinar"
+
+#: connection.py:197
+msgid "Mode:"
+msgstr "Modo:"
+
+#: connection.py:205
+msgid "No authentication"
+msgstr "Sem autenticação"
+
+#: connection.py:223 connection.py:234
+msgid "Password:"
+msgstr "Senha:"
+
+#: connection.py:231
+msgid "User name:"
+msgstr "Nome do usuário:"
+
+#: connection.py:263
+msgid "Network settings"
+msgstr "Preferências de rede"
+
+#: connection.py:273
+msgid "Automatic query (DHCP)"
+msgstr "Consulta automática (DHCP)"
+
+#: connection.py:278
+msgid "Manual"
+msgstr "Manual"
+
+#: connection.py:289 connection.py:306 connection.py:321
+msgid "Custom"
+msgstr "Personalizado"
+
+#: connection.py:294
+msgid "Net mask:"
+msgstr "Máscara de rede:"
+
+#: connection.py:301
+msgid "Gateway:"
+msgstr "Gateway:"
+
+#: connection.py:512
 msgid "Configure network connection"
 msgstr "Configurar conexão de rede"
 
@@ -174,35 +203,13 @@ msgstr "Conexão com COMAR fechou inesperadamente, tentando reconectar-se..."
 msgid ""
 "Cannot connect to the COMAR! If it is not running you should start it with "
 "the 'service comar start' command in a root console."
-msgstr "Não é possível se conectar ao COMAR! Se ele não estiver executando você deve iniciá-lo com o comando 'service comar start' num console como root."
+msgstr ""
+"Não é possível se conectar ao COMAR! Se ele não estiver executando você deve "
+"iniciá-lo com o comando 'service comar start' num console como root."
 
 #: comariface.py:365
 msgid "new connection"
 msgstr "nova conexão"
-
-#: nameconf.py:35
-msgid "Computer"
-msgstr "Computador"
-
-#: nameconf.py:41
-msgid "Host name:"
-msgstr "Nome do host:"
-
-#: nameconf.py:56
-msgid "Up"
-msgstr "Acima"
-
-#: nameconf.py:59
-msgid "Down"
-msgstr "Abaixo"
-
-#: nameconf.py:134
-msgid "Add Name Server"
-msgstr "Adicionar um Servidor de Nomes"
-
-#: nameconf.py:135
-msgid "Name server:"
-msgstr "Servidor de nomes:"
 
 #: newconn.py:26
 msgid "Create a new connection"
@@ -212,19 +219,19 @@ msgstr "Criar uma nova conexão"
 msgid "Select device:"
 msgstr "Selecionar dispositivo:"
 
-#: newconn.py:57
+#: newconn.py:58
 msgid "Create"
 msgstr "Criar"
 
-#: newconn.py:103
+#: newconn.py:112
 msgid "No suitable device found"
 msgstr "Nenhum dispositivo apropriado encontrado"
 
-#: newconn.py:109
+#: newconn.py:118
 msgid "Install network packages!"
 msgstr "Instalar pacotes de rede!"
 
-#: newconn.py:110
+#: newconn.py:119
 msgid "No package with COMAR network scripts are installed yet."
 msgstr "Nenhum pacote com os scripts de rede COMAR estão instalados ainda."
 
@@ -251,4 +258,3 @@ msgstr "O applet de rede deve iniciar automaticamente quando você se logar?"
 #: network-applet.py:491
 msgid "Network Applet"
 msgstr "Applet de Rede"
-
