--- a/tasma/service-manager/po/nl.po
+++ b/tasma/service-manager/po/nl.po
@@ -5,13 +5,13 @@
 # Thijs Hulshof <thijs@fedoraproject.org>, 2006.
 # Rinse de Vries <rinsedevries@kde.nl>, 2006.
 # W.P.M.H.I.A. Gielen <w.gielen@gmail.com>, 2006.
-# Willem Gielen <w.gielen@gmail.com>, 2006.
+# Willem Gielen <w.gielen@gmail.com>, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-07 21:36+0200\n"
-"PO-Revision-Date: 2006-12-26 00:56+0200\n"
+"PO-Revision-Date: 2007-03-01 21:19+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -72,11 +72,11 @@ msgstr "%s is niet actief."
 
 #: src/service-manager.py:242
 msgid "Execute startup script"
-msgstr "Voer een opstart script uit"
+msgstr "Voer een opstartscript uit"
 
 #: src/service-manager.py:243
 msgid "Execuete shutdown script"
-msgstr "Voer een afsluit script uit"
+msgstr "Voer een afsluitscript uit"
 
 #: src/service-manager.py:307
 msgid ""
