--- a/trunk/tasma/disk-manager/po/nl.po
+++ b/trunk/tasma/disk-manager/po/nl.po
@@ -7,13 +7,13 @@
 # Rinse de Vries <rinsedevries@kde.nl>, 2006.
 # W.P.M.H.I.A. Gielen <w.gielen@gmail.com>, 2006.
 # Gökmen GÖKSEL <gokmen@pardus.org.tr>, 2006.
-# Willem Gielen <w.gielen@gmail.com>, 2006.
+# Willem Gielen <w.gielen@gmail.com>, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-19 10:50+0200\n"
-"PO-Revision-Date: 2006-12-25 23:16+0200\n"
+"PO-Revision-Date: 2007-03-01 21:28+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -60,13 +60,11 @@ msgstr "Toon systeempartities"
 
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr ""
-"Om schijf veranderingen bij te werken zal de schijfbeheer actief moeten zijn "
-"als root"
+msgstr "Om schijf veranderingen te updaten dient schijfbeheer actief te zijn als root"
 
 #: src/disk-manager.py:126
 msgid "User not in disk group !"
-msgstr "Gebruiker niet in de schijfgroep !"
+msgstr "Gebruiker niet in de schijfgroep!"
 
 #: src/disk-manager.py:227 src/disk-manager.py:250
 msgid "Completed"
@@ -74,12 +72,12 @@ msgstr "Voltooid"
 
 #: src/disk-manager.py:227 src/disk-manager.py:250
 msgid "File /etc/fstab updated !"
-msgstr "Bestand /etc/fstab bijgewerkt !"
+msgstr "Bestand /etc/fstab bijgewerkt!"
 
 #: src/disk-manager.py:268
 #, python-format
 msgid "%s for %s failure !!"
-msgstr "%s voor %s mislukt !!"
+msgstr "%s voor %s mislukt!!"
 
 #: src/disk-manager.py:296
 msgid "Mount Point"
@@ -92,3 +90,4 @@ msgstr "Bestandssysteem type"
 #: src/disk-manager.py:374
 msgid "Disk Manager is already running!"
 msgstr "Schijfbeheer is al actief!"
+
