--- a/tasma/firewall-config/po/nl.po
+++ b/tasma/firewall-config/po/nl.po
@@ -5,13 +5,13 @@
 #
 # Bahadır Kandemir <bahadir@pardus.org.tr>, 2006.
 # W.P.M.H.I.A. Gielen <w.gielen@gmail.com>, 2006.
-# Willem Gielen <w.gielen@gmail.com>, 2006.
+# Willem Gielen <w.gielen@gmail.com>, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-22 16:41+0200\n"
-"PO-Revision-Date: 2006-12-25 23:17+0200\n"
+"PO-Revision-Date: 2007-03-01 21:31+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -53,7 +53,7 @@ msgstr "Accepteer alle uitgaande verbindingen door poorten %s"
 #: src/firewall-config.py:98
 #, python-format
 msgid "Reject all outgoing connection through ports %s"
-msgstr "Keur alle uitgaande verbindigen af door poorten %s"
+msgstr "Keur alle uitgaande verbindingen af door poorten %s"
 
 #: src/firewall-config.py:127
 msgid "Invalid port range."
@@ -93,7 +93,7 @@ msgid ""
 "services."
 msgstr ""
 "Klik hier om de firewall te starten en slechts bepaalde inkomende en "
-"uitgaande verbindigen toe te staan."
+"uitgaande verbindingen toe te staan."
 
 #: src/firewall-config.py:420
 msgid "Pardus Firewall Interface is already running!"
